test/sema/positive/typevar_instantiation1.impala
fn myf(x: int, f: fn[A](A)->bool) -> bool {
    f[int](x)
}
