test/sema/negative/wrong_arg_type.impala
fn myf(x: bool, f: fn(int)->bool) -> bool {
   f(x)
}
